--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "chrome-aws-lambda": "^10.1.0",
+    "@sparticuz/chromium-min": "^114.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.262.0",
