--- a/package.json
+++ b/package.json
@@ -11,12 +11,11 @@
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "@sparticuz/chromium": "^114.0.0",
-    "@sparticuz/chromium-min": "^114.0.0",
+    "chrome-aws-lambda": "^10.1.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.262.0",
-    "puppeteer-core": "^20.9.0",
+    "puppeteer-core": "^10.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
