--- a/package.json
+++ b/package.json
@@ -9,16 +9,13 @@
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
-  "engines": {
-    "node": "14.x"
-  },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
-    "chrome-aws-lambda": "^10.1.0",
+    "@sparticuz/chromium": "^114.0.0",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "lucide-react": "^0.262.0",
-    "puppeteer-core": "10.1",
+    "puppeteer-core": "^20.9.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tailwind-merge": "^1.14.0",
